--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@ h1 {
   font-family: Geneva, Arial, sans-serif;
   font-size: 36px;
   text-align: center;
+  background-color: antiquewhite;
+  text-transform: uppercase;
+  padding: 15px 0px;
 }
 
 h2 {
@@ -10,15 +13,19 @@ h2 {
   font-size: 26px;
   font-weight: bold;
   position: relative;
+  color: white;
+  background-color: dimgrey;
+  padding: 10px 0px;
 }
 
 h3 {
   font-family: Helvetica, sans-serif;
   text-align: left;
-  font-size: 20px;
+  font-size: 24px;
   font-weight: bold;
   position: relative;
   padding-left: 15px;
+  font-style: italic;
 }
 
 table {
@@ -33,11 +40,12 @@ hr {
   margin-left: auto;
   margin-right: auto;
   background-color: slategray;
+  margin: 50px 0px;
 }
 
 .table_header {
   font-family: Geneva, Verdana, sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   text-align: left;
   padding-left: 15px;
   background-color: slategray;
